<resources>
    <string name="app_name">CutePid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // For Login Facebook
    <string name="facebook_app_id">132075534157288</string>
    <string name="fb_login_protocol_scheme">fb132075534157288</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_edit_info">EditInfoActivity</string>
    <string name="your_birthday">Your BirthDay</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_password">Your Password</string>
    <string name="login">Login</string>
    <string name="edit_info">Edit Info</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="status_optional">Status (optional)</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="search_setting">Search Setting</string>
    <string name="what_you_want_to_see">(What you want to see)</string>
    <string name="not_match_go_to_home_to_match_new_chat">Not match go to home to match new chat</string>
    <string name="please_tab_to_refresh">Please tab to refresh.</string>
    <string name="firstname">firstName</string>
    <string name="status">status</string>
    <string name="dislike">DisLike</string>
    <string name="like">Like</string>
    <string name="your_phoneNumber">Your PhoneNumber</string>
    <string name="next">Next</string>
    <string name="firstname_age">FirstName, Age</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="your_gender">Your Gender</string>
    <string name="status2">Status</string>
    <string name="credit">Credit</string>
    <string name="creditIconApp">IconApp made by Freepik from www.flaticon.com</string>
    <string name="creditLoginBG">Login Background made from www.freepik.com</string>
    <string name="creditIconFilterSetting">Icon Filter Setting made by Copenhagen from www.iconfinder.com</string>
    <string name="creditEditProfile">Icon Edit Info made by andré matiazzo from thenounproject.com</string>
    <string name="endCredit">(Thanks a lots. I just use for my Education Project.)</string>

</resources>
