<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.armhansa.app.cutepid.fragment_home.ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight="3"/>


    <TextView
        android:id="@+id/firstName"
        android:text="@string/firstname_age"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:id="@+id/settingBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/filter"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:text="@string/setting"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_width="80dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/editInfoBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/setting"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:text="@string/edit_info"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="30dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/logoutBtn"
        android:text="@string/logout"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/credit"
        android:text="@string/credit"
        android:textColor="#0000FF"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>
