<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="com.armhansa.app.cutepid.fragment_authen.MenuLoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    
    <ImageView
        android:id="@+id/imageProfile"
        android:src="@drawable/title"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookBtn"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/loginBtn"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="#FF77AA"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>


</LinearLayout>
