<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    android:padding="10dp"
    tools:context="com.armhansa.app.cutepid.fragment_authen.SetPasswordFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/passwordTxt"
        android:text="@string/your_password"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <EditText
        android:id="@+id/passwordInput"
        android:background="#64ffffff"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"/>

    <Button
        android:id="@+id/phoneLoginBtn"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:background="#FF5555"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
